FindBugs: switch to Number.valueOf caching factory methods from explicit construction.