@@ -32,11 +32,11 @@ import org.eclipse.jst.jsf.validation.internal.el.diagnostics.DiagnosticFactory;
 
     protected Long doRealOperation(Long firstArg, Long secondArg) 
     {
-        return new Long(firstArg.longValue() + secondArg.longValue());
+        return Long.valueOf(firstArg.longValue() + secondArg.longValue());
     }
 
     protected Double doRealOperation(Double firstArg, Double secondArg) {
-        return new Double(firstArg.doubleValue() + secondArg.doubleValue());
+        return Double.valueOf(firstArg.doubleValue() + secondArg.doubleValue());
     }
 
     protected BigDecimal doRealOperation(BigDecimal firstArg,
